# typstry

./: .gitignore  .gitmodules  DEVELOPMENT_CONTEXT.md  README.md  SKILLS.md  TYPSTRY_KHMER_RENDER_PREPARATION_IMPLEMENTATION_PLAN.md  index.html  package-lock.json  package.json  test.typ  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.update-test.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/examples/: START-HERE.typ
src-tauri/resources/examples/01-basics/01-writing-basics/: main.typ
src-tauri/resources/examples/01-basics/02-unicode-math/: main.typ
src-tauri/resources/examples/02-multilingual-writing/01-script-font-assignments/: README.md  main.typ
src-tauri/resources/examples/02-multilingual-writing/04-complex-script-typography/: main.typ
src-tauri/resources/examples/02-multilingual-writing/05-script-and-direction-samples/01-mixed-scripts/: main.typ
src-tauri/resources/examples/02-multilingual-writing/05-script-and-direction-samples/02-bidirectional-rendering/: main.typ
src-tauri/resources/examples/02-multilingual-writing/05-script-and-direction-samples/03-cjk-layout/: main.typ
src-tauri/resources/examples/02-typography-and-scripts/01-mixed-scripts/: main.typ
src-tauri/resources/examples/02-typography-and-scripts/02-bidirectional-text/: main.typ
src-tauri/resources/examples/02-typography-and-scripts/03-complex-script-shaping/: main.typ
src-tauri/resources/examples/02-typography-and-scripts/04-cjk-layout/: main.typ
src-tauri/resources/examples/03-language-providers/01-khmer-deep-support/: main.typ
src-tauri/resources/examples/03-language-providers/02-khmer-segmentation-comparison/: main.typ
src-tauri/resources/examples/03-language-providers/03-lao-enhanced-support/: main.typ  template.typ
src-tauri/resources/examples/03-language-providers/04-optional-dictionaries/: README.md  main.typ
src-tauri/resources/examples/03-language-tools/01-khmer-deep-support/: main.typ
src-tauri/resources/examples/03-language-tools/02-khmer-segmentation-comparison/: main.typ
src-tauri/resources/examples/03-language-tools/03-interactive-tools/: main.typ
src-tauri/resources/examples/03-language-tools/04-lao-enhanced-support/: main.typ  template.typ
src-tauri/resources/examples/03-language-tools/04-lao-enhanced-support/sections/: 01-introduction.typ  02-lao-tools.typ  03-mixed-scripts.typ
src-tauri/resources/examples/04-projects/01-simple-thesis/: main.typ  template.typ
src-tauri/resources/examples/04-projects/01-simple-thesis/chapters/: 01-introduction.typ  03-conclusion.typ
src-tauri/resources/examples/04-projects/02-khmer-folklore-book/: lib.typ  main.typ  template.typ
src-tauri/resources/examples/04-projects/02-khmer-folklore-book/stories/: 01-rabbit-and-snail.typ  02-crab-and-heron.typ  03-three-sons.typ  04-four-bald-men.typ
src-tauri/resources/examples/04-projects/03-typsastra-readme/: import.typ  main.typ  readme.typ  refs.bib  template.typ
src-tauri/resources/examples/04-projects/03-typsastra-readme/chapters/: khmer-research.typ  research-workflow.typ
src-tauri/resources/examples/04-projects/03-typstella-readme/: import.typ  main.typ  readme.typ  refs.bib
src-tauri/resources/examples/04-projects/03-typstella-readme/chapters/: khmer-research.typ  research-workflow.typ
src-tauri/resources/examples/04-projects/03-typstry-readme/: main.typ
src-tauri/resources/examples/04-projects/03-typstry-readme/chapters/: khmer-research.typ
src-tauri/resources/examples/04-research-projects/01-multilingual-article/: template.typ
src-tauri/resources/examples/04-research-projects/02-simple-thesis/: main.typ  template.typ
src-tauri/resources/examples/04-research-projects/03-khmer-folklore-book/: README.md  main.typ  template.typ
src-tauri/resources/examples/04-research-projects/04-typsastra-readme/: main.typ  template.typ
src-tauri/resources/examples/05-project-portability/01-main-and-included-files/: main.typ
src-tauri/resources/examples/05-project-portability/02-portable-workspace-state/: main.typ
src-tauri/resources/examples/05-project-portability/03-font-free-project-export/: main.typ
src-tauri/resources/examples/09-khmer-folklore-book/: main.typ  template.typ
src-tauri/resources/examples/09-khmer-folklore-book/stories/: 01-rabbit-and-snail.typ  02-crab-and-heron.typ  03-three-sons.typ
src-tauri/resources/examples/09-khmer-segmentation-comparison/: main.typ
src-tauri/resources/examples/10-khmer-segmentation-comparison/: main.typ
src-tauri/resources/examples/templates/multilingual-article/: template.typ
src-tauri/src/: examples.rs  font_store.rs  input_language.rs  language_scopes.rs  lib.rs  main.rs  project_archive.rs  project_fonts.rs  scaled_fonts.rs  toolchain.rs  webview_storage.rs
src-tauri/src/render_prepare/: mirror.rs  mod.rs  scanner.rs  segment.rs  sourcemap.rs
src-tauri/src/segmentation/: mod.rs  provider.rs  registry.rs
(+167 files in other folders)
