[package]
name = "typstry-editor"
version = "1.0.0"
edition = "2021"

[lib]
name = "typstry_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-fs = { version = "2.5.0", features = ["watch"] }
tauri-plugin-shell = "2.3.0"
tauri-plugin-dialog = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
tokio = { version = "1.52.3", features = ["process", "io-util", "sync", "rt"] }
trash = "5.2.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0"
zip = { version = "4.6", default-features = false, features = ["deflate"] }
tar = "0.4"
xz2 = "0.1"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link-time optimizations
opt-level = "s" # Optimize for binary size
strip = true # Automatically strip symbols from the binary
