[package]
name = "typsastra"
version = "0.5.1"
edition = "2021"

[lib]
name = "typsastra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-fs = { version = "2.5.0", features = ["watch"] }
tauri-plugin-shell = "2.3.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
tokio = { version = "1.52.3", features = ["process", "io-util", "sync", "rt", "net", "macros"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
trash = "5.2.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0"
unicode-normalization = "0.1"
zip = { version = "4.6", default-features = false, features = ["deflate"] }
base64 = "0.22"
fontdb = "0.23"
dunce = "1.0"
ttf-parser = "0.25"
khmer_segmenter = { path = "../third_party/khmer_segmenter/port/rust", default-features = false }
spellbook = "0.4.2"
icu_segmenter = { version = "2.2", default-features = false, features = ["compiled_data"] }
open = "5.3"
typsastra-font-scaler = { path = "../crates/font-scaler" }
tauri-plugin-process = "2"
typst-syntax = "=0.15.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 16 # Use multiple codegen units to enable multithreaded compilation
lto = true # Enables link-time optimizations
opt-level = "s" # Optimize for binary size
strip = true # Automatically strip symbols from the binary

[profile.dev.package.khmer_segmenter]
opt-level = 3
